# anywidget-core-dump-repro

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/ipyfoo/: __init__.py
src/ipyfoo/static/: widget.css  widget.js
tests/: test_ipyfoo.py
